Bug 432062: Windows vector font rendering is broken, patch by roc@ocallahan.org, r=stuart, a=schrep